# arroyopy

./: .containerignore  .gitignore  Containerfile  DOCKER_SERVICES.md  LICENSE.txt  README.md  TELEMETRY_QUICKSTART.md  docker-compose.yml  pixi.toml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml  publish.yaml
conf/: grafana-dashboards.yml  otel-collector-config.yaml
conf/dashboards/: grafana-dashboard-zmq.json
config/: grafana-dashboard.json  grafana-dashboards.yml  grafana-datasources.yml  prometheus.yml
docs/: PIXI_MIGRATION.md  PIXI_QUICK_REF.md  configuration.md  index.md  pixi-guide.md  telemetry.md
examples/: block_config_example.py  prometheus_example.py  telemetry_decorator_demo.py  telemetry_example.py  unit_config_example.py
examples/config/: README.md  env_var_example.yaml  simple_pipeline.yaml
examples/simple_demo/: README.md  __init__.py  pipeline.yaml  quick_test.sh  simple_operator.py  sink.py  source.py  zmq_components.py
examples/zmq_simple/: main.py
src/_test/: conftest.py  mocks.py  test_block.py  test_cli.py  test_file_watcher.py  test_redis.py  test_schemas.py  test_telemetry.py  test_timing.py  test_unit.py  test_zmq.py
src/als_arroyo/: listener.py  log_utils.py  message.py  operator.py  publisher.py  redis.py  zmq.py
src/als_arroyo/xps/: DELETEME_Maybeparse.py  labview_listener.py  schemas.py
src/arroyo/: listener.py  operator.py  publisher.py  redis.py  schemas.py  timing.py  zmq.py
src/arroyopy/: __init__.py  block.py  cli.py  config.py  listener.py  operator.py  otlp.py  publisher.py  redis.py  schemas.py  telemetry.py  unit.py  zmq.py
src/arroyopy/app/: zmq_listener.py
