[project]
name = "arroyo"
version = "0.0.a1"
authors = [
    { name="Dylan McReynolds", email="dmcreynolds@lbl.gov"},
]
description = "A library to simplify processing streams of data"
readme = "README.md"
requires-python = ">=3.11, <3.12"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv",
    "pandas",
    "numpy",
    "pydantic>=2.0",
    "typer"
]

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["dev"], solve-group = "default" }
zmq = { features = ["zmq"], solve-group = "default"}
redis = { features = ["redis"], solve-group = "default" }
tiled = { features = ["tiled"], solve-group = "default" }

[tool.pixi.feature.dev.tasks]
test = "pytest"
pre-commit = "pre-commit run --all-files"


[project.optional-dependencies]
# These are required for developing the package (running the tests, building
# the documentation) but not necessarily required for _using_ it.
dev = [
    "fakeredis",
    "flake8",
    "pre-commit",
    "pyzmq",
    "redis",
    "pytest-asyncio",
    "pytest-mock",
    "tiled[minimal-server]"]

zmq = [
    "pyzmq"
]

redis = [
    "redis"
]

tiled = [
    "tiled[client]"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = [
    "osx-64",
    "osx-arm64",
    "linux-64",
    "linux-aarch64",
    "win-64"]

[tool.pixi.dependencies]
python = ">=3.10, <3.13"
pytest = ">=8.3.3,<9"


[project.urls]
Homepage = "https://github.com/als-computing/als_arroyo"
Issues = "https://github.com/als-computing/als_arroyo/issues"


[tool.isort]
profile = "black"

[tool.hatch.metadata]
allow-direct-references = true