[project]
name = "arroyopy"
version = "0.1.0"
authors = [
    { name="Dylan McReynolds", email="dmcreynolds@lbl.gov"},
]
license = { text = "BSD-3" }
description = "A library to simplify processing streams of data"
readme = "README.md"
requires-python = ">=3.11, <3.13"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv",
    "pandas",
    "numpy",
    "pydantic>=2.0",
    "typer"
]



[project.optional-dependencies]
# These are required for developing the package (running the tests, building
# the documentation) but not necessarily required for _using_ it.
dev = [
    "fakeredis",
    "flake8",
    "pre-commit",
    "pyzmq",
    "redis",
    "pytest-asyncio",
    "pytest-mock",
    "tiled[minimal-server]"]

zmq = [
    "pyzmq"
]

redis = [
    "redis"
]

tiled = [
    "tiled[client]"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = [
    "osx-64",
    "osx-arm64",
    "linux-64",
    "linux-aarch64",
    "win-64"]

[tool.pixi.dependencies]
python = ">=3.11, <3.13"
pytest = ">=8.3.3,<9"


[project.urls]
Homepage = "https://github.com/als-computing/arroyopy"
Issues = "https://github.com/als-computing/arroyopy/issues"


[tool.isort]
profile = "black"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/arroyopy"]
