[project]
name = "arroyopy"
version = "0.3.0a4"
authors = [
    { name="Dylan McReynolds", email="dmcreynolds@lbl.gov"},
]
license = { text = "BSD-3" }
description = "A library to simplify processing streams of data"
readme = "README.md"
requires-python = ">=3.11, <3.14"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv",
    "pandas",
    "numpy",
    "pydantic>=2.0",
    "pyyaml",
    "typer"
]



[project.optional-dependencies]
# These are required for developing the package (running the tests, building
# the documentation) but not necessarily required for _using_ it.
dev = [
    "fakeredis",
    "flake8",
    "pre-commit",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pyzmq",
    "redis",
    "tiled[minimal-server]",
    "typer"]

zmq = [
    "pyzmq"
]

redis = [
    "redis"
]

tiled = [
    "tiled[client]"
]

file-watch = [
    "watchfiles >= 0.21.0"
]


[project.scripts]
arroyo = "arroyopy.cli:app"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.urls]
Homepage = "https://github.com/als-computing/arroyopy"
Issues = "https://github.com/als-computing/arroyopy/issues"


[tool.coverage.run]
source = ["src/arroyopy"]
omit = ["*/test*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 90
show_missing = true
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
filterwarnings = [
    # Ignore fakeredis deprecation warnings (external library issues)
    "ignore:Call to '__init__' function with deprecated usage.*retry_on_timeout:DeprecationWarning",
    "ignore:Call to '__init__' function with deprecated usage.*lib_name:DeprecationWarning",
    "ignore:Call to '__init__' function with deprecated usage.*lib_version:DeprecationWarning",
]

[tool.hatch.metadata]
allow-direct-references = true
